--- a/reasoning.ipynb
+++ b/reasoning.ipynb
@@ -1124,7 +1124,328 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Average Metric: 5.00 / 5 (100.0%):  20%|██        | 5/25 [00:04<00:10,  1.89it/s]"
+      "Average Metric: 20.00 / 25 (80.0%): 100%|██████████| 25/25 [00:24<00:00,  1.00it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 13:03:14 INFO dspy.evaluate.evaluate: Average Metric: 20 / 25 (80.0%)\n",
+      "2025/03/13 13:03:14 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 80.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 3', 'Predictor 0: Few-Shot Set 4'].\n",
+      "2025/03/13 13:03:14 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [84.0, 84.0, 84.0, 88.0, 100.0, 76.0, 76.0, 84.0, 96.0, 80.0]\n",
+      "2025/03/13 13:03:14 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [68.57, 84.64]\n",
+      "2025/03/13 13:03:14 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 84.64\n",
+      "2025/03/13 13:03:14 INFO dspy.teleprompt.mipro_optimizer_v2: ==========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 13:03:14 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 13 / 28 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 21.00 / 25 (84.0%): 100%|██████████| 25/25 [00:12<00:00,  1.94it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 13:03:27 INFO dspy.evaluate.evaluate: Average Metric: 21 / 25 (84.0%)\n",
+      "2025/03/13 13:03:27 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 84.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 6', 'Predictor 0: Few-Shot Set 18'].\n",
+      "2025/03/13 13:03:27 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [84.0, 84.0, 84.0, 88.0, 100.0, 76.0, 76.0, 84.0, 96.0, 80.0, 84.0]\n",
+      "2025/03/13 13:03:27 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [68.57, 84.64]\n",
+      "2025/03/13 13:03:27 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 84.64\n",
+      "2025/03/13 13:03:27 INFO dspy.teleprompt.mipro_optimizer_v2: ==========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 13:03:27 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 14 / 28 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 22.00 / 25 (88.0%): 100%|██████████| 25/25 [00:11<00:00,  2.18it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 13:03:38 INFO dspy.evaluate.evaluate: Average Metric: 22 / 25 (88.0%)\n",
+      "2025/03/13 13:03:38 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 88.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 5', 'Predictor 0: Few-Shot Set 4'].\n",
+      "2025/03/13 13:03:38 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [84.0, 84.0, 84.0, 88.0, 100.0, 76.0, 76.0, 84.0, 96.0, 80.0, 84.0, 88.0]\n",
+      "2025/03/13 13:03:38 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [68.57, 84.64]\n",
+      "2025/03/13 13:03:38 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 84.64\n",
+      "2025/03/13 13:03:38 INFO dspy.teleprompt.mipro_optimizer_v2: ==========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 13:03:38 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 15 / 28 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 22.00 / 25 (88.0%): 100%|██████████| 25/25 [00:22<00:00,  1.10it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 13:04:01 INFO dspy.evaluate.evaluate: Average Metric: 22 / 25 (88.0%)\n",
+      "2025/03/13 13:04:01 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 88.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 8', 'Predictor 0: Few-Shot Set 5'].\n",
+      "2025/03/13 13:04:01 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [84.0, 84.0, 84.0, 88.0, 100.0, 76.0, 76.0, 84.0, 96.0, 80.0, 84.0, 88.0, 88.0]\n",
+      "2025/03/13 13:04:01 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [68.57, 84.64]\n",
+      "2025/03/13 13:04:01 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 84.64\n",
+      "2025/03/13 13:04:01 INFO dspy.teleprompt.mipro_optimizer_v2: ==========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 13:04:01 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 16 / 28 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 22.00 / 25 (88.0%): 100%|██████████| 25/25 [00:27<00:00,  1.10s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 13:04:29 INFO dspy.evaluate.evaluate: Average Metric: 22 / 25 (88.0%)\n",
+      "2025/03/13 13:04:29 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 88.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 5', 'Predictor 0: Few-Shot Set 15'].\n",
+      "2025/03/13 13:04:29 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [84.0, 84.0, 84.0, 88.0, 100.0, 76.0, 76.0, 84.0, 96.0, 80.0, 84.0, 88.0, 88.0, 88.0]\n",
+      "2025/03/13 13:04:29 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [68.57, 84.64]\n",
+      "2025/03/13 13:04:29 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 84.64\n",
+      "2025/03/13 13:04:29 INFO dspy.teleprompt.mipro_optimizer_v2: ==========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 13:04:29 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 17 / 28 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 20.00 / 25 (80.0%): 100%|██████████| 25/25 [00:00<00:00, 5041.23it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 13:04:29 INFO dspy.evaluate.evaluate: Average Metric: 20 / 25 (80.0%)\n",
+      "2025/03/13 13:04:29 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 80.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 8', 'Predictor 0: Few-Shot Set 18'].\n",
+      "2025/03/13 13:04:29 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [84.0, 84.0, 84.0, 88.0, 100.0, 76.0, 76.0, 84.0, 96.0, 80.0, 84.0, 88.0, 88.0, 88.0, 80.0]\n",
+      "2025/03/13 13:04:29 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [68.57, 84.64]\n",
+      "2025/03/13 13:04:29 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 84.64\n",
+      "2025/03/13 13:04:29 INFO dspy.teleprompt.mipro_optimizer_v2: ==========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 13:04:29 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 18 / 28 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 22.00 / 25 (88.0%): 100%|██████████| 25/25 [00:23<00:00,  1.06it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 13:04:52 INFO dspy.evaluate.evaluate: Average Metric: 22 / 25 (88.0%)\n",
+      "2025/03/13 13:04:52 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 88.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 16', 'Predictor 0: Few-Shot Set 6'].\n",
+      "2025/03/13 13:04:52 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [84.0, 84.0, 84.0, 88.0, 100.0, 76.0, 76.0, 84.0, 96.0, 80.0, 84.0, 88.0, 88.0, 88.0, 80.0, 88.0]\n",
+      "2025/03/13 13:04:52 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [68.57, 84.64]\n",
+      "2025/03/13 13:04:52 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 84.64\n",
+      "2025/03/13 13:04:52 INFO dspy.teleprompt.mipro_optimizer_v2: ==========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 13:04:52 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 19 / 28 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 24.00 / 25 (96.0%): 100%|██████████| 25/25 [00:17<00:00,  1.46it/s] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 13:05:09 INFO dspy.evaluate.evaluate: Average Metric: 24 / 25 (96.0%)\n",
+      "2025/03/13 13:05:09 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 96.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 14', 'Predictor 0: Few-Shot Set 3'].\n",
+      "2025/03/13 13:05:09 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [84.0, 84.0, 84.0, 88.0, 100.0, 76.0, 76.0, 84.0, 96.0, 80.0, 84.0, 88.0, 88.0, 88.0, 80.0, 88.0, 96.0]\n",
+      "2025/03/13 13:05:09 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [68.57, 84.64]\n",
+      "2025/03/13 13:05:09 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 84.64\n",
+      "2025/03/13 13:05:09 INFO dspy.teleprompt.mipro_optimizer_v2: ==========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 13:05:09 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 20 / 28 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 18.00 / 25 (72.0%): 100%|██████████| 25/25 [00:26<00:00,  1.06s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 13:05:36 INFO dspy.evaluate.evaluate: Average Metric: 18 / 25 (72.0%)\n",
+      "2025/03/13 13:05:36 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 72.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 13', 'Predictor 0: Few-Shot Set 14'].\n",
+      "2025/03/13 13:05:36 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [84.0, 84.0, 84.0, 88.0, 100.0, 76.0, 76.0, 84.0, 96.0, 80.0, 84.0, 88.0, 88.0, 88.0, 80.0, 88.0, 96.0, 72.0]\n",
+      "2025/03/13 13:05:36 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [68.57, 84.64]\n",
+      "2025/03/13 13:05:36 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 84.64\n",
+      "2025/03/13 13:05:36 INFO dspy.teleprompt.mipro_optimizer_v2: ==========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 13:05:36 INFO dspy.teleprompt.mipro_optimizer_v2: ===== Trial 21 / 28 - Full Evaluation =====\n",
+      "2025/03/13 13:05:36 INFO dspy.teleprompt.mipro_optimizer_v2: Doing full eval on next top averaging program (Avg Score: 96.0) from minibatch trials...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 237.00 / 280 (84.6%): 100%|██████████| 280/280 [01:17<00:00,  3.62it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 13:06:53 INFO dspy.evaluate.evaluate: Average Metric: 237 / 280 (84.6%)\n",
+      "2025/03/13 13:06:53 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [68.57, 84.64, 84.64]\n",
+      "2025/03/13 13:06:53 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 84.64\n",
+      "2025/03/13 13:06:53 INFO dspy.teleprompt.mipro_optimizer_v2: =======================\n",
+      "2025/03/13 13:06:53 INFO dspy.teleprompt.mipro_optimizer_v2: \n",
+      "\n",
+      "2025/03/13 13:06:53 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 22 / 28 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 20.00 / 25 (80.0%): 100%|██████████| 25/25 [00:00<00:00, 3953.91it/s] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 13:06:53 INFO dspy.evaluate.evaluate: Average Metric: 20 / 25 (80.0%)\n",
+      "2025/03/13 13:06:53 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 80.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 14', 'Predictor 0: Few-Shot Set 3'].\n",
+      "2025/03/13 13:06:53 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [84.0, 84.0, 84.0, 88.0, 100.0, 76.0, 76.0, 84.0, 96.0, 80.0, 84.0, 88.0, 88.0, 88.0, 80.0, 88.0, 96.0, 72.0, 80.0]\n",
+      "2025/03/13 13:06:53 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [68.57, 84.64, 84.64]\n",
+      "2025/03/13 13:06:53 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 84.64\n",
+      "2025/03/13 13:06:53 INFO dspy.teleprompt.mipro_optimizer_v2: ==========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 13:06:53 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 23 / 28 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 21.00 / 25 (84.0%): 100%|██████████| 25/25 [00:14<00:00,  1.78it/s] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 13:07:08 INFO dspy.evaluate.evaluate: Average Metric: 21 / 25 (84.0%)\n",
+      "2025/03/13 13:07:08 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 84.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 9', 'Predictor 0: Few-Shot Set 9'].\n",
+      "2025/03/13 13:07:08 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [84.0, 84.0, 84.0, 88.0, 100.0, 76.0, 76.0, 84.0, 96.0, 80.0, 84.0, 88.0, 88.0, 88.0, 80.0, 88.0, 96.0, 72.0, 80.0, 84.0]\n",
+      "2025/03/13 13:07:08 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [68.57, 84.64, 84.64]\n",
+      "2025/03/13 13:07:08 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 84.64\n",
+      "2025/03/13 13:07:08 INFO dspy.teleprompt.mipro_optimizer_v2: ==========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 13:07:08 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 24 / 28 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 22.00 / 25 (88.0%): 100%|██████████| 25/25 [00:12<00:00,  1.94it/s] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 13:07:21 INFO dspy.evaluate.evaluate: Average Metric: 22 / 25 (88.0%)\n",
+      "2025/03/13 13:07:21 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 88.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 17', 'Predictor 0: Few-Shot Set 3'].\n",
+      "2025/03/13 13:07:21 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [84.0, 84.0, 84.0, 88.0, 100.0, 76.0, 76.0, 84.0, 96.0, 80.0, 84.0, 88.0, 88.0, 88.0, 80.0, 88.0, 96.0, 72.0, 80.0, 84.0, 88.0]\n",
+      "2025/03/13 13:07:21 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [68.57, 84.64, 84.64]\n",
+      "2025/03/13 13:07:21 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 84.64\n",
+      "2025/03/13 13:07:21 INFO dspy.teleprompt.mipro_optimizer_v2: ==========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 13:07:21 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 25 / 28 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 23.00 / 25 (92.0%): 100%|██████████| 25/25 [00:11<00:00,  2.10it/s] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 13:07:33 INFO dspy.evaluate.evaluate: Average Metric: 23 / 25 (92.0%)\n",
+      "2025/03/13 13:07:33 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 92.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 4', 'Predictor 0: Few-Shot Set 16'].\n",
+      "2025/03/13 13:07:33 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [84.0, 84.0, 84.0, 88.0, 100.0, 76.0, 76.0, 84.0, 96.0, 80.0, 84.0, 88.0, 88.0, 88.0, 80.0, 88.0, 96.0, 72.0, 80.0, 84.0, 88.0, 92.0]\n",
+      "2025/03/13 13:07:33 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [68.57, 84.64, 84.64]\n",
+      "2025/03/13 13:07:33 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 84.64\n",
+      "2025/03/13 13:07:33 INFO dspy.teleprompt.mipro_optimizer_v2: ==========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 13:07:33 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 26 / 28 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 22.00 / 24 (91.7%):  96%|█████████▌| 24/25 [00:17<00:02,  2.01s/it] "
      ]
     }
    ],
