--- a/entity_extraction.ipynb
+++ b/entity_extraction.ipynb
@@ -34,9 +34,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Example({'tokens': ['EU', 'rejects', 'German', 'call', 'to', 'boycott', 'British', 'lamb', '.'], 'expected_extracted_people': []}) (input_keys={'tokens'})"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "import tempfile\n",
@@ -98,12 +109,14 @@
     "\n",
     "# Prepare the training and test sets\n",
     "train_set = prepare_dataset(dataset[\"train\"], 0, 50)\n",
-    "test_set = prepare_dataset(dataset[\"test\"], 0, 200)"
+    "test_set = prepare_dataset(dataset[\"test\"], 0, 200)\n",
+    "\n",
+    "train_set[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,6 +131,45 @@
     "    extracted_people: list[str] = dspy.OutputField(desc=\"all tokens referring to specific people extracted from the tokenized text\")\n",
     "\n",
     "people_extractor = dspy.ChainOfThought(PeopleExtraction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lm = dspy.LM(model=\"openai/gpt-4o-mini\")\n",
+    "dspy.settings.configure(lm=lm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extraction_correctness_metric(example: dspy.Example, prediction: dspy.Prediction, trace=None) -> bool:\n",
+    "    \"\"\"\n",
+    "    Computes correctness of entity extraction predictions.\n",
+    "    \n",
+    "    Args:\n",
+    "        example (dspy.Example): The dataset example containing expected people entities.\n",
+    "        prediction (dspy.Prediction): The prediction from the DSPy people extraction program.\n",
+    "        trace: Optional trace object for debugging.\n",
+    "    \n",
+    "    Returns:\n",
+    "        bool: True if predictions match expectations, False otherwise.\n",
+    "    \"\"\"\n",
+    "    return prediction.extracted_people == example.expected_extracted_people\n",
+    "\n",
+    "evaluate_correctness = dspy.Evaluate(\n",
+    "    devset=test_set,\n",
+    "    metric=extraction_correctness_metric,\n",
+    "    num_threads=24,\n",
+    "    display_progress=True,\n",
+    "    display_table=True\n",
+    ")"
    ]
   }
  ],
