--- a/entity_extraction.ipynb
+++ b/entity_extraction.ipynb
@@ -174,6 +174,380 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Metric: 181.00 / 200 (90.5%): 100%|██████████| 200/200 [00:16<00:00, 12.32it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 14:25:55 INFO dspy.evaluate.evaluate: Average Metric: 181 / 200 (90.5%)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tokens</th>\n",
+       "      <th>expected_extracted_people</th>\n",
+       "      <th>reasoning</th>\n",
+       "      <th>extracted_people</th>\n",
+       "      <th>extraction_correctness_metric</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[SOCCER, -, JAPAN, GET, LUCKY, WIN, ,, CHINA, IN, SURPRISE, DEFEAT...</td>\n",
+       "      <td>[CHINA]</td>\n",
+       "      <td>The tokens provided do not contain any specific names of people. T...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[Nadim, Ladki]</td>\n",
+       "      <td>[Nadim, Ladki]</td>\n",
+       "      <td>The tokens \"Nadim\" and \"Ladki\" refer to specific individuals. They...</td>\n",
+       "      <td>[Nadim, Ladki]</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[AL-AIN, ,, United, Arab, Emirates, 1996-12-06]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>The provided tokens do not contain any references to specific peop...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[Japan, began, the, defence, of, their, Asian, Cup, title, with, a...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>The provided tokens do not contain any specific names of people. T...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[But, China, saw, their, luck, desert, them, in, the, second, matc...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>In the provided tokens, \"China\" and \"Uzbekistan\" are the only toke...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>['The', 'Wallabies', 'have', 'their', 'sights', 'set', 'on', 'a', ...</td>\n",
+       "      <td>[David, Campese]</td>\n",
+       "      <td>The tokenized text mentions \"David Campese,\" who is a specific per...</td>\n",
+       "      <td>[David, Campese]</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>['The', 'Wallabies', 'currently', 'have', 'no', 'plans', 'to', 'ma...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>The text mentions \"the 34-year-old winger,\" which refers to a spec...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>['Campese', 'will', 'be', 'up', 'against', 'a', 'familiar', 'foe',...</td>\n",
+       "      <td>[Campese, Rob, Andrew]</td>\n",
+       "      <td>The tokens contain references to specific people, namely \"Campese\"...</td>\n",
+       "      <td>[Campese, Rob, Andrew]</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>['\"', 'Campo', 'has', 'a', 'massive', 'following', 'in', 'this', '...</td>\n",
+       "      <td>[Campo, Andrew]</td>\n",
+       "      <td>The tokenized text mentions \"Andrew\" as a specific person. It is t...</td>\n",
+       "      <td>[Andrew]</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>['On', 'tour', ',', 'Australia', 'have', 'won', 'all', 'four', 'te...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>The provided tokens do not contain any specific names of people. I...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>200 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                    tokens  \\\n",
+       "0    [SOCCER, -, JAPAN, GET, LUCKY, WIN, ,, CHINA, IN, SURPRISE, DEFEAT...   \n",
+       "1                                                           [Nadim, Ladki]   \n",
+       "2                          [AL-AIN, ,, United, Arab, Emirates, 1996-12-06]   \n",
+       "3    [Japan, began, the, defence, of, their, Asian, Cup, title, with, a...   \n",
+       "4    [But, China, saw, their, luck, desert, them, in, the, second, matc...   \n",
+       "..                                                                     ...   \n",
+       "195  ['The', 'Wallabies', 'have', 'their', 'sights', 'set', 'on', 'a', ...   \n",
+       "196  ['The', 'Wallabies', 'currently', 'have', 'no', 'plans', 'to', 'ma...   \n",
+       "197  ['Campese', 'will', 'be', 'up', 'against', 'a', 'familiar', 'foe',...   \n",
+       "198  ['\"', 'Campo', 'has', 'a', 'massive', 'following', 'in', 'this', '...   \n",
+       "199  ['On', 'tour', ',', 'Australia', 'have', 'won', 'all', 'four', 'te...   \n",
+       "\n",
+       "    expected_extracted_people  \\\n",
+       "0                     [CHINA]   \n",
+       "1              [Nadim, Ladki]   \n",
+       "2                          []   \n",
+       "3                          []   \n",
+       "4                          []   \n",
+       "..                        ...   \n",
+       "195          [David, Campese]   \n",
+       "196                        []   \n",
+       "197    [Campese, Rob, Andrew]   \n",
+       "198           [Campo, Andrew]   \n",
+       "199                        []   \n",
+       "\n",
+       "                                                                 reasoning  \\\n",
+       "0    The tokens provided do not contain any specific names of people. T...   \n",
+       "1    The tokens \"Nadim\" and \"Ladki\" refer to specific individuals. They...   \n",
+       "2    The provided tokens do not contain any references to specific peop...   \n",
+       "3    The provided tokens do not contain any specific names of people. T...   \n",
+       "4    In the provided tokens, \"China\" and \"Uzbekistan\" are the only toke...   \n",
+       "..                                                                     ...   \n",
+       "195  The tokenized text mentions \"David Campese,\" who is a specific per...   \n",
+       "196  The text mentions \"the 34-year-old winger,\" which refers to a spec...   \n",
+       "197  The tokens contain references to specific people, namely \"Campese\"...   \n",
+       "198  The tokenized text mentions \"Andrew\" as a specific person. It is t...   \n",
+       "199  The provided tokens do not contain any specific names of people. I...   \n",
+       "\n",
+       "           extracted_people extraction_correctness_metric  \n",
+       "0                        []                                \n",
+       "1            [Nadim, Ladki]                     ✔️ [True]  \n",
+       "2                        []                     ✔️ [True]  \n",
+       "3                        []                     ✔️ [True]  \n",
+       "4                        []                     ✔️ [True]  \n",
+       "..                      ...                           ...  \n",
+       "195        [David, Campese]                     ✔️ [True]  \n",
+       "196                      []                     ✔️ [True]  \n",
+       "197  [Campese, Rob, Andrew]                     ✔️ [True]  \n",
+       "198                [Andrew]                                \n",
+       "199                      []                     ✔️ [True]  \n",
+       "\n",
+       "[200 rows x 5 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "90.5"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div>\n",
+       "  <style scoped>\n",
+       "  button {\n",
+       "    border: none;\n",
+       "    border-radius: 4px;\n",
+       "    background-color: rgb(34, 114, 180);\n",
+       "    font-family: -apple-system, \"system-ui\", \"Segoe UI\", Roboto, \"Helvetica Neue\", Arial;\n",
+       "    font-size: 13px;\n",
+       "    color: white;\n",
+       "    margin-top: 8px;\n",
+       "    margin-bottom: 8px;\n",
+       "    padding: 8px 16px;\n",
+       "    cursor: pointer;\n",
+       "  }\n",
+       "  button:hover {\n",
+       "    background-color: rgb(66, 153, 224);\n",
+       "  }\n",
+       "  </style>\n",
+       "  <button\n",
+       "    onclick=\"\n",
+       "        const display = this.nextElementSibling.style.display;\n",
+       "        const isCollapsed = display === 'none';\n",
+       "        this.nextElementSibling.style.display = isCollapsed ? null : 'none';\n",
+       "\n",
+       "        const verb = isCollapsed ? 'Collapse' : 'Expand';\n",
+       "        this.innerText = `${verb} MLflow Trace`;\n",
+       "    \"\n",
+       "  >Collapse MLflow Trace</button>\n",
+       "  <iframe\n",
+       "    id=\"trace-renderer\"\n",
+       "    style=\"width: 100%; height: 500px; border: none; resize: vertical;\"\n",
+       "    src=\"http://localhost:5000/static-files/lib/notebook-trace-renderer/index.html?trace_id=24c25c79828f4423931dacf53164a4d5&amp;experiment_id=374362034103955121&amp;trace_id=ec0246f88f2b48808b77328976445bd3&amp;experiment_id=374362034103955121&amp;trace_id=eb69ad4fab1a42d8ac7069fa70f94e31&amp;experiment_id=374362034103955121&amp;trace_id=b8715e69b68d4065b3c5e1c9f4a99dc3&amp;experiment_id=374362034103955121&amp;trace_id=34f6b5f258494943a82537a7a58deb1b&amp;experiment_id=374362034103955121&amp;trace_id=7c548b24117948e1a0e518a34ff29482&amp;experiment_id=374362034103955121&amp;trace_id=7d8e095e8c6c4571963ba7552ebf6662&amp;experiment_id=374362034103955121&amp;trace_id=bac79b58ccbf4c668a14802c9273ade1&amp;experiment_id=374362034103955121&amp;trace_id=a5c17e28603f4a248f4e2d6a9ead63be&amp;experiment_id=374362034103955121&amp;trace_id=85e8c3cd96ca42ce831d992d3b8510b2&amp;experiment_id=374362034103955121&amp;version=2.20.3\"\n",
+       "  />\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "[Trace(request_id=24c25c79828f4423931dacf53164a4d5), Trace(request_id=ec0246f88f2b48808b77328976445bd3), Trace(request_id=eb69ad4fab1a42d8ac7069fa70f94e31), Trace(request_id=b8715e69b68d4065b3c5e1c9f4a99dc3), Trace(request_id=34f6b5f258494943a82537a7a58deb1b), Trace(request_id=7c548b24117948e1a0e518a34ff29482), Trace(request_id=7d8e095e8c6c4571963ba7552ebf6662), Trace(request_id=bac79b58ccbf4c668a14802c9273ade1), Trace(request_id=a5c17e28603f4a248f4e2d6a9ead63be), Trace(request_id=85e8c3cd96ca42ce831d992d3b8510b2)]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "evaluate_correctness(people_extractor, devset=test_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Metric: 181.00 / 200 (90.5%): 100%|██████████| 200/200 [00:01<00:00, 113.49it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 14:28:54 INFO dspy.evaluate.evaluate: Average Metric: 181 / 200 (90.5%)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "🏃 View run extractor_evaluation at: http://localhost:5000/#/experiments/374362034103955121/runs/9a305735ced747d897fb77fc4d195825\n",
+      "🧪 View experiment at: http://localhost:5000/#/experiments/374362034103955121\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div>\n",
+       "  <style scoped>\n",
+       "  button {\n",
+       "    border: none;\n",
+       "    border-radius: 4px;\n",
+       "    background-color: rgb(34, 114, 180);\n",
+       "    font-family: -apple-system, \"system-ui\", \"Segoe UI\", Roboto, \"Helvetica Neue\", Arial;\n",
+       "    font-size: 13px;\n",
+       "    color: white;\n",
+       "    margin-top: 8px;\n",
+       "    margin-bottom: 8px;\n",
+       "    padding: 8px 16px;\n",
+       "    cursor: pointer;\n",
+       "  }\n",
+       "  button:hover {\n",
+       "    background-color: rgb(66, 153, 224);\n",
+       "  }\n",
+       "  </style>\n",
+       "  <button\n",
+       "    onclick=\"\n",
+       "        const display = this.nextElementSibling.style.display;\n",
+       "        const isCollapsed = display === 'none';\n",
+       "        this.nextElementSibling.style.display = isCollapsed ? null : 'none';\n",
+       "\n",
+       "        const verb = isCollapsed ? 'Collapse' : 'Expand';\n",
+       "        this.innerText = `${verb} MLflow Trace`;\n",
+       "    \"\n",
+       "  >Collapse MLflow Trace</button>\n",
+       "  <iframe\n",
+       "    id=\"trace-renderer\"\n",
+       "    style=\"width: 100%; height: 500px; border: none; resize: vertical;\"\n",
+       "    src=\"http://localhost:5000/static-files/lib/notebook-trace-renderer/index.html?trace_id=5c10a2b4f89644d7a536b70156d872dc&amp;experiment_id=374362034103955121&amp;trace_id=32931affce454ed3b981a375fe413238&amp;experiment_id=374362034103955121&amp;trace_id=277468f416374168b96d987c1e3df3aa&amp;experiment_id=374362034103955121&amp;trace_id=07473c288e54446da47170017f9514e3&amp;experiment_id=374362034103955121&amp;trace_id=1db84fe235924be2a7db1e52ea3326af&amp;experiment_id=374362034103955121&amp;trace_id=cf5694d0169b439d87b544d2e72d7a56&amp;experiment_id=374362034103955121&amp;trace_id=c92a86792ecd40d79be059197dbaa69f&amp;experiment_id=374362034103955121&amp;trace_id=071e979540774766a2b13241d1d19d88&amp;experiment_id=374362034103955121&amp;trace_id=6020059fb36a4911b15b5790dae8942d&amp;experiment_id=374362034103955121&amp;trace_id=a449c79c49db4d42a076b8da80d96333&amp;experiment_id=374362034103955121&amp;version=2.20.3\"\n",
+       "  />\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "[Trace(request_id=5c10a2b4f89644d7a536b70156d872dc), Trace(request_id=32931affce454ed3b981a375fe413238), Trace(request_id=277468f416374168b96d987c1e3df3aa), Trace(request_id=07473c288e54446da47170017f9514e3), Trace(request_id=1db84fe235924be2a7db1e52ea3326af), Trace(request_id=cf5694d0169b439d87b544d2e72d7a56), Trace(request_id=c92a86792ecd40d79be059197dbaa69f), Trace(request_id=071e979540774766a2b13241d1d19d88), Trace(request_id=6020059fb36a4911b15b5790dae8942d), Trace(request_id=a449c79c49db4d42a076b8da80d96333)]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import mlflow\n",
+    "\n",
+    "with mlflow.start_run(run_name=\"extractor_evaluation\"):\n",
+    "    evaluate_correctness = dspy.Evaluate(\n",
+    "        devset=test_set,\n",
+    "        metric=extraction_correctness_metric,\n",
+    "        num_threads=24,\n",
+    "        display_progress=True,\n",
+    "        # To record the outputs and detailed scores to MLflow\n",
+    "        return_all_scores=True,\n",
+    "        return_outputs=True,\n",
+    "    )\n",
+    "\n",
+    "    # Evaluate the program as usual\n",
+    "    aggregated_score, outputs, all_scores = evaluate_correctness(people_extractor)\n",
+    "\n",
+    "    # Log the aggregated score\n",
+    "    mlflow.log_metric(\"exact_match\", aggregated_score)\n",
+    "    # Log the detailed evaluation results as a table\n",
+    "    mlflow.log_table(\n",
+    "        {\n",
+    "            \"Tokens\": [example.tokens for example in test_set],\n",
+    "            \"Expected\": [example.expected_extracted_people for example in test_set],\n",
+    "            \"Predicted\": outputs,\n",
+    "            \"Exact match\": all_scores,\n",
+    "        },\n",
+    "        artifact_file=\"eval_results.json\",\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
